[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Health Bar/bosshealth_progress.png" type="Texture" id=1]
[ext_resource path="res://Assets/Health Bar/bosshealth_frame.png" type="Texture" id=3]
[ext_resource path="res://UI Objects/BossHealthBar.gd" type="Script" id=4]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="."]

[node name="HealthBars" type="MarginContainer" parent="."]
visible = false
margin_right = 300.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TweenBar" type="TextureProgress" parent="HealthBars"]
margin_right = 300.0
margin_bottom = 40.0
texture_progress = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="HealthBars"]
margin_right = 300.0
margin_bottom = 40.0
value = 96.0
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
